re-run pipeline

--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -22,11 +22,11 @@
    "id": "7f2bd96d-b693-4a82-856c-edf6a85ec89a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T23:24:17.918701Z",
-     "iopub.status.busy": "2023-02-25T23:24:17.918471Z",
-     "iopub.status.idle": "2023-02-25T23:24:20.054315Z",
-     "shell.execute_reply": "2023-02-25T23:24:20.053442Z",
-     "shell.execute_reply.started": "2023-02-25T23:24:17.918677Z"
+     "iopub.execute_input": "2023-02-26T13:44:59.561636Z",
+     "iopub.status.busy": "2023-02-26T13:44:59.561320Z",
+     "iopub.status.idle": "2023-02-26T13:45:01.702970Z",
+     "shell.execute_reply": "2023-02-26T13:45:01.701978Z",
+     "shell.execute_reply.started": "2023-02-26T13:44:59.561608Z"
     },
     "tags": []
    },
@@ -56,11 +56,11 @@
    "id": "a212ce8e-b374-4cbb-9bd1-e6543972b4e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T23:24:20.057931Z",
-     "iopub.status.busy": "2023-02-25T23:24:20.057654Z",
-     "iopub.status.idle": "2023-02-25T23:24:20.539747Z",
-     "shell.execute_reply": "2023-02-25T23:24:20.538989Z",
-     "shell.execute_reply.started": "2023-02-25T23:24:20.057911Z"
+     "iopub.execute_input": "2023-02-26T13:45:01.706936Z",
+     "iopub.status.busy": "2023-02-26T13:45:01.706594Z",
+     "iopub.status.idle": "2023-02-26T13:45:02.132485Z",
+     "shell.execute_reply": "2023-02-26T13:45:02.131683Z",
+     "shell.execute_reply.started": "2023-02-26T13:45:01.706917Z"
     },
     "tags": []
    },
@@ -138,11 +138,11 @@
    "id": "a92c97a0-6447-4655-bdd6-49301f98f11b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T23:24:20.543075Z",
-     "iopub.status.busy": "2023-02-25T23:24:20.542808Z",
-     "iopub.status.idle": "2023-02-25T23:24:20.561496Z",
-     "shell.execute_reply": "2023-02-25T23:24:20.560708Z",
-     "shell.execute_reply.started": "2023-02-25T23:24:20.543055Z"
+     "iopub.execute_input": "2023-02-26T13:45:02.135343Z",
+     "iopub.status.busy": "2023-02-26T13:45:02.135200Z",
+     "iopub.status.idle": "2023-02-26T13:45:02.152887Z",
+     "shell.execute_reply": "2023-02-26T13:45:02.152221Z",
+     "shell.execute_reply.started": "2023-02-26T13:45:02.135327Z"
     },
     "tags": []
    },
@@ -174,11 +174,11 @@
    "id": "04a1937a-9241-4f24-91c5-b5513e042002",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T23:24:20.566207Z",
-     "iopub.status.busy": "2023-02-25T23:24:20.566012Z",
-     "iopub.status.idle": "2023-02-25T23:24:20.749703Z",
-     "shell.execute_reply": "2023-02-25T23:24:20.748125Z",
-     "shell.execute_reply.started": "2023-02-25T23:24:20.566188Z"
+     "iopub.execute_input": "2023-02-26T13:45:02.157216Z",
+     "iopub.status.busy": "2023-02-26T13:45:02.156940Z",
+     "iopub.status.idle": "2023-02-26T13:45:02.341834Z",
+     "shell.execute_reply": "2023-02-26T13:45:02.340907Z",
+     "shell.execute_reply.started": "2023-02-26T13:45:02.157199Z"
     },
     "tags": []
    },
@@ -216,11 +216,11 @@
    "id": "3ce1356d-9c5d-4b83-85d1-c2c2cdd0b8fb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T23:24:20.754367Z",
-     "iopub.status.busy": "2023-02-25T23:24:20.754060Z",
-     "iopub.status.idle": "2023-02-25T23:24:20.890125Z",
-     "shell.execute_reply": "2023-02-25T23:24:20.888957Z",
-     "shell.execute_reply.started": "2023-02-25T23:24:20.754337Z"
+     "iopub.execute_input": "2023-02-26T13:45:02.345397Z",
+     "iopub.status.busy": "2023-02-26T13:45:02.345215Z",
+     "iopub.status.idle": "2023-02-26T13:45:02.468653Z",
+     "shell.execute_reply": "2023-02-26T13:45:02.467389Z",
+     "shell.execute_reply.started": "2023-02-26T13:45:02.345373Z"
     },
     "tags": []
    },
@@ -241,11 +241,11 @@
    "id": "781ad89f-9e61-4708-81d8-91fc89f2ed25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T23:24:20.894758Z",
-     "iopub.status.busy": "2023-02-25T23:24:20.894408Z",
-     "iopub.status.idle": "2023-02-25T23:24:21.032313Z",
-     "shell.execute_reply": "2023-02-25T23:24:21.030531Z",
-     "shell.execute_reply.started": "2023-02-25T23:24:20.894726Z"
+     "iopub.execute_input": "2023-02-26T13:45:02.472842Z",
+     "iopub.status.busy": "2023-02-26T13:45:02.472541Z",
+     "iopub.status.idle": "2023-02-26T13:45:02.613188Z",
+     "shell.execute_reply": "2023-02-26T13:45:02.612214Z",
+     "shell.execute_reply.started": "2023-02-26T13:45:02.472808Z"
     },
     "tags": []
    },
@@ -274,11 +274,11 @@
    "id": "c6185dc5-6d1a-4975-92b2-5cd7fd6c6b58",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T23:24:21.037402Z",
-     "iopub.status.busy": "2023-02-25T23:24:21.037122Z",
-     "iopub.status.idle": "2023-02-25T23:24:21.930072Z",
-     "shell.execute_reply": "2023-02-25T23:24:21.928235Z",
-     "shell.execute_reply.started": "2023-02-25T23:24:21.037370Z"
+     "iopub.execute_input": "2023-02-26T13:45:02.618370Z",
+     "iopub.status.busy": "2023-02-26T13:45:02.617914Z",
+     "iopub.status.idle": "2023-02-26T13:45:03.473785Z",
+     "shell.execute_reply": "2023-02-26T13:45:03.472584Z",
+     "shell.execute_reply.started": "2023-02-26T13:45:02.618322Z"
     },
     "tags": []
    },
@@ -294,11 +294,11 @@
    "id": "191a9185-f1d3-4271-8116-fd0a47b788ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T23:24:21.935505Z",
-     "iopub.status.busy": "2023-02-25T23:24:21.935083Z",
-     "iopub.status.idle": "2023-02-25T23:24:22.451436Z",
-     "shell.execute_reply": "2023-02-25T23:24:22.450272Z",
-     "shell.execute_reply.started": "2023-02-25T23:24:21.935462Z"
+     "iopub.execute_input": "2023-02-26T13:45:03.477780Z",
+     "iopub.status.busy": "2023-02-26T13:45:03.477437Z",
+     "iopub.status.idle": "2023-02-26T13:45:04.017764Z",
+     "shell.execute_reply": "2023-02-26T13:45:04.016657Z",
+     "shell.execute_reply.started": "2023-02-26T13:45:03.477741Z"
     },
     "tags": []
    },
@@ -316,7 +316,9 @@
    ],
    "source": [
     "# Test `fit_models()` with kwargs -- shouldn't throw any errors\n",
-    "pc_copy.fit_models(fix_hill_coefficient=True, fix_non_neutralized_frac=True)"
+    "pc_copy.fit_models(\n",
+    "    fix_hill_coefficient=True, fix_non_neutralized_frac=True, reg_activity_weight=1\n",
+    ")"
    ]
   },
   {
@@ -333,11 +335,11 @@
    "id": "1b73d334-a4f0-4dc6-b636-6c179930dd74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T23:24:22.456427Z",
-     "iopub.status.busy": "2023-02-25T23:24:22.456105Z",
-     "iopub.status.idle": "2023-02-25T23:24:22.555034Z",
-     "shell.execute_reply": "2023-02-25T23:24:22.554257Z",
-     "shell.execute_reply.started": "2023-02-25T23:24:22.456400Z"
+     "iopub.execute_input": "2023-02-26T13:45:04.019529Z",
+     "iopub.status.busy": "2023-02-26T13:45:04.019078Z",
+     "iopub.status.idle": "2023-02-26T13:45:04.112408Z",
+     "shell.execute_reply": "2023-02-26T13:45:04.111730Z",
+     "shell.execute_reply.started": "2023-02-26T13:45:04.019502Z"
     },
     "tags": []
    },
@@ -356,11 +358,11 @@
    "id": "5728896f-1b6d-4c01-85b1-59eff469e05e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T23:24:22.556231Z",
-     "iopub.status.busy": "2023-02-25T23:24:22.555920Z",
-     "iopub.status.idle": "2023-02-25T23:24:22.634731Z",
-     "shell.execute_reply": "2023-02-25T23:24:22.633968Z",
-     "shell.execute_reply.started": "2023-02-25T23:24:22.556213Z"
+     "iopub.execute_input": "2023-02-26T13:45:04.113567Z",
+     "iopub.status.busy": "2023-02-26T13:45:04.113226Z",
+     "iopub.status.idle": "2023-02-26T13:45:04.188578Z",
+     "shell.execute_reply": "2023-02-26T13:45:04.187808Z",
+     "shell.execute_reply.started": "2023-02-26T13:45:04.113550Z"
     },
     "tags": []
    },
