--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -14,11 +14,13 @@
     "The fitting is implemented in the `Polyclonal.fit` function, which allows adjustment of the weights for the regularization.\n",
     "By default the optimization uses the gradient-based L-BFGS-B method implemented in [scipy.optimize.minimize](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html) and simply continues optimization until the minimization converges.\n",
     "\n",
-    "Two key details about the fitting are as follows:\n",
+    "Some key details about the fitting are as follows:\n",
     "\n",
     " 1. By default, the fitting first fits a \"site-level\" model in which all mutations are lumped together so there are just two characters (wildtype and mutant). The escape values from this initial site-level fitting are then used to initialize the full mutation-level escape values which are then further optimized. The idea is that first fitting a simpler model with less parameters helps get the parameters into a \"reasonable\" space before full model optimization. This option is implemented via the `fit_site_level_first` parameter to `Polyclonal.fit`, and it is recommended to use this approach as testing indicates it helps.\n",
     " \n",
-    " 2. By default, if there are multiple variants with the same mutations, they are by default treated as indenpendent measurements that are fit. This can be changed to \"collapse\" them to a single variant that is then given a weight proportional to the number of constituent variants that is used when calculating the loss. This option is implemented by default via `collapse_identical_variants` during the initialization of a `Polyclonal` object. It speeds up fitting without (usually) substantially changing the fitting results. However, do **not** collaps if you are using bootstrapping.\n",
+    " 2. By default, if you are using free-parameter Hill coefficients or non-neutralized fractions, a model with those fixed is fit first via `fit_fixed_first`. It is fit with stronger regulation on the activities (via `fit_fixed_first_reg_activity_weight`) to keep epitopes from dropping too low in activity to be picked up in subsequent all-parameter optimization. When this model is being used, the site model is fit with this fixed model, not the later full model.\n",
+    " \n",
+    " 3. By default, if there are multiple variants with the same mutations, they are by default treated as independent measurements that are fit. This can be changed to \"collapse\" them to a single variant that is then given a weight proportional to the number of constituent variants that is used when calculating the loss. This option is implemented by default via `collapse_identical_variants` during the initialization of a `Polyclonal` object. It speeds up fitting without (usually) substantially changing the fitting results. However, do **not** collaps if you are using bootstrapping.\n",
     " \n",
     "The `Polyclonal.fit` also allows you to adjust the weights on the regularizations.\n",
     "The default should be sensible, but you may want to try adjusting them about.\n",
@@ -142,12 +144,17 @@
     "### Regularization of Hill coefficients\n",
     "We regularize the Hill coefficients $n_e$ to be close to one using the regularization, using a penalty that essentially operates on the log of $n_e$ so the values are bounded by 0 and infinity:\n",
     "$$\n",
-    "R_{\\rm{Hill coefficient}} = \\lambda_{\\rm{Hill coefficient}} \\left(\\log n_e\\right)^2\n",
+    "R_{\\rm{Hill coefficient}}\n",
+    "=\n",
+    "\\begin{cases}\n",
+    "\\lambda_{\\rm{Hill coefficient}} n_e^2 & \\rm{if\\;} n_e \\ge 1 \\\\\n",
+    "\\lambda_{\\rm{Hill coefficient}} \\left(1 - 1/n_e\\right)^2 & \\rm{if\\;} n_e < 1 \\\\\n",
+    "\\end{cases}\n",
     "$$\n",
     "where $\\lambda_{\\rm{Hill coefficient}}$ is the strength of the regularization.\n",
     "Note that it is important that the Hill coefficients be fairly strongly normalized.\n",
-    "For instance, a value of $\\lambda_{\\rm{Hill coefficient}} = 50$ creates a penalty of 24 when $n_e = 0.5$ or $n_e = 2$, and a penalty of 8.2 when $n_e = 1.5$ or $n_e = 1 / 1.5$.\n",
-    "Note also that the minimization bounds $n_e > 0$."
+    "For instance, a value of $\\lambda_{\\rm{Hill coefficient}} = 50$ creates a penalty of 200 when $n_e = 1/3$ or $n_e = 3$, a penalty of 50 when $n_e = 1/2$ or $n_e = 2$, and a penalty of 12.5 when $n_e = 1.5$ or $n_e = 1 / 1.5$.\n",
+    "Note also that the minimization bounds $0 < n_e$."
    ]
   },
   {
@@ -166,7 +173,7 @@
     "where $\\lambda_{\\rm{non-neutralized-frac}}$ is the strength of the regularization.\n",
     "Note that the regularization should be fairly strong.\n",
     "For instance, value of $\\lambda_{\\rm{non-neutralized-frac}} = 1000$ creates a penalty of 10 when $t_e = 0.1$ and a penalty of 62.5 when $t_e = 0.25$.\n",
-    "Note also that the minimization bounds $1 \\ge t_e \\ge 0$."
+    "Note also that the minimization bounds $0.5 \\ge t_e \\ge 0$."
    ]
   },
   {
@@ -413,7 +420,10 @@
     "$$\n",
     "\\frac{\\partial R_{\\rm{Hill coefficient}}}{\\partial n_e}\n",
     "=\n",
-    "\\frac{2\\lambda_{\\rm{Hill coefficient}} \\left(\\log n_e\\right)}{n_e}\n",
+    "\\begin{cases}\n",
+    "2\\left(x - 1\\right) & \\rm{if\\;} x \\ge 1 \\\\\n",
+    "2 / x^2 - 2 / x^3 & \\rm{if\\;} x < 1 \\\\\n",
+    "\\end{cases}\n",
     "$$"
    ]
   },
