use `binarymap` v0.7 (`scipy.sparse` arrays rather than matrices)

--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -234,7 +234,7 @@
     "            calc_grad=False,\n",
     "        )\n",
     "        numerical_grad = (p_vc_eps - p_vc) / eps\n",
-    "        analytical_grad = dpvc_dparams[iparam].toarray()\n",
+    "        analytical_grad = dpvc_dparams[[iparam], :].toarray()\n",
     "        diff = numpy.sqrt(((numerical_grad - analytical_grad) ** 2).sum())\n",
     "        mag = numpy.sqrt((analytical_grad**2).sum())\n",
     "        if (diff > 1e-7) or (diff / mag > 1e-3):\n",
